<resources>
    <string name="app_name">The book library</string>

    <string name="btn_login">Log In</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_send">Send Book</string>

    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_login">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_book_name">Book Name</string>

    <string name="no_error" translatable="false" />
    <string name="error_empty_field">Empty field</string>
    <string name="error_pass_not_eq">Passwords are not equals</string>

    <string name="error_already_exist">This email has already been taken</string>
    <string name="error_incorrect_pass">Password is too short (minimum is 6 characters)</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_connection_problem">Failed to connect with server</string>

    <string name="book_title">Title:</string>
    <string name="book_created">Created:</string>
    <string name="book_updated">Updated:</string>
    <string name="book_status">Status:</string>
    <string name="book_deadline">Deadline:</string>

    <string name="profile_email">Your Email:</string>
    <string name="profile_reserved_book">Reserved book:</string>
    <string name="profile_return_book">Return book</string>

    <string name="title_personal_book">Personal Books</string>
    <string name="title_profile">My Profile</string>
    <string name="title_add_book">Add Book</string>
    <string name="title_share">Share</string>

    <string name="label_login">Login</string>
    <string name="label_registration">Registration</string>
    <string name="label_book_info">Info About Book</string>
    <string name="label_all_books">Books in Library</string>
    <string name="label_personal_books">Personal Books</string>
    <string name="label_profile">Profile</string>

    <string name="status_picked_up">picked up</string>
    <string name="status_reserved">reserved</string>
    <string name="status_in_library">in library</string>

    <string name="toast_book_reserved">Book successfully reserved</string>
</resources>