<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.thebooklibrary.ui.login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_bookListFragment"
            app:destination="@id/bookListFragment" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.thebooklibrary.ui.registration.RegistrationFragment"
        android:label="@string/label_registration"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_registrationFragment_to_bookListFragment"
            app:destination="@id/bookListFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookListFragment"
        tools:layout="@layout/fragment_book_list"
        android:name="com.example.thebooklibrary.ui.booklist.BookListFragment"
        android:label="@string/label_all_books" >
        <action
            android:id="@+id/action_bookListFragment_to_bookDetailsFragment"
            app:destination="@id/bookDetailsFragment" />
        <action
            android:id="@+id/action_bookListFragment_to_personalBooksFragment"
            app:destination="@id/personalBooksFragment" />
        <action
            android:id="@+id/action_bookListFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookDetailsFragment"
        android:name="com.example.thebooklibrary.ui.bookdetails.BookDetailsFragment"
        tools:layout="@layout/fragment_book_details"
        android:label="@string/label_book_info" />

    <fragment
        android:id="@+id/personalBooksFragment"
        tools:layout="@layout/fragment_personal_books"
        android:name="com.example.thebooklibrary.ui.personalbooks.PersonalBooksFragment"
        android:label="@string/label_personal_books" >
        <action
            android:id="@+id/action_personalBooksFragment_to_bookDetailsFragment"
            app:destination="@id/bookDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        tools:layout="@layout/fragment_profile"
        android:name="com.example.thebooklibrary.ui.profile.ProfileFragment"
        android:label="@string/label_profile" />
</navigation>