<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.thebooklibrary.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_title_email"
            style="@style/Profile.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/Profile.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_email"
            tools:text="examle.email@gmail.com" />

        <TextView
            android:id="@+id/tv_title_reserved_book"
            style="@style/Profile.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_reserved_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <TextView
            android:id="@+id/tv_reserved_book"
            style="@style/Profile.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.reservedBook.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_reserved_book"
            tools:text="Some book name" />

        <Button
            android:id="@+id/btn_return_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.returnBook()}"
            android:text="@string/profile_return_book"
            android:visibility="@{viewModel.bookVisibility}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reserved_book" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_reserved_group"
            android:visibility="@{viewModel.bookVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_title_reserved_book,tv_reserved_book,btn_return_book" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>